// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summaries Failure renders error 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="my-4 text-center"
  >
    <div
      className="my-3 text-danger"
    >
      ¡Ratas! Parece que no estás conectado a internet. Refresca la página o pulsa el siguiente botón.
    </div>
    <button
      className="btn btn-outline-primary btn-sm"
      onClick={[Function]}
    >
      Volver a intentar
    </button>
  </div>
</div>
`;

exports[`Summaries Failure renders error whan has items 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        channel="user-Fraudier"
        channelName={null}
        comments={78}
        created={1513920502005}
        downvotes={0}
        icon="far fa-image"
        id="zbmsb"
        isPlaceholder={false}
        key="zbmsb"
        owner="Fraudier"
        preview={
          Object {
            "content": "https://k50.kn3.net/taringa/2/7/9/1/4/3/20/fraudier/D4C.jpg",
            "kind": "image",
          }
        }
        score="2.9k"
        shares={1}
        slug="si-no-das-like-no-tendras-pelirojas-en-100-anos_zbmsb"
        thumbnail="https://k50.kn3.net/taringa/2/7/9/1/4/3/20/fraudier/78x1026_D4C.jpg"
        title="Si no das like no tendras pelirojas en 100 años"
        upvotes={0}
      />
    </ul>
  </div>
  <div
    className="my-4 text-center"
  >
    <div
      className="my-3 text-danger"
    >
      ¡Ratas! Parece que no estás conectado a internet. Refresca la página o pulsa el siguiente botón.
    </div>
    <button
      className="btn btn-outline-primary btn-sm"
      onClick={[Function]}
    >
      Volver a intentar
    </button>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 1 placeholder when has items and is fetching 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        channel="user-Fraudier"
        channelName={null}
        comments={78}
        created={1513920502005}
        downvotes={0}
        icon="far fa-image"
        id="zbmsb"
        isPlaceholder={false}
        key="zbmsb"
        owner="Fraudier"
        preview={
          Object {
            "content": "https://k50.kn3.net/taringa/2/7/9/1/4/3/20/fraudier/D4C.jpg",
            "kind": "image",
          }
        }
        score="2.9k"
        shares={1}
        slug="si-no-das-like-no-tendras-pelirojas-en-100-anos_zbmsb"
        thumbnail="https://k50.kn3.net/taringa/2/7/9/1/4/3/20/fraudier/78x1026_D4C.jpg"
        title="Si no das like no tendras pelirojas en 100 años"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="0"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 3 placeholders when size is big 1`] = `
<div
  className="Summaries item-big"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="0"
        shares={0}
        size="settings/ITEM_BIG"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="1"
        shares={0}
        size="settings/ITEM_BIG"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="2"
        shares={0}
        size="settings/ITEM_BIG"
        upvotes={0}
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 9 placeholders when size is medium 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="0"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="1"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="2"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="3"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="4"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="5"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="6"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="7"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="8"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 9 placeholders when size is no given nor placeholder count 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="0"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="1"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="2"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="3"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="4"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="5"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="6"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="7"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="8"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders 19 placeholders when size is small 1`] = `
<div
  className="Summaries item-small"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="0"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="1"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="2"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="3"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="4"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="5"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="6"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="7"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="8"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="9"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="10"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="11"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="12"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="13"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="14"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="15"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="16"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="17"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="18"
        shares={0}
        size="settings/ITEM_SMALL"
        upvotes={0}
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries Placeholder renders given placeholders 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="0"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="1"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="2"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="3"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="4"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="5"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="6"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="7"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
      <Summary
        comments={0}
        downvotes={0}
        isPlaceholder={true}
        key="8"
        shares={0}
        size="settings/ITEM_MEDIUM"
        upvotes={0}
      />
    </ul>
  </div>
</div>
`;

exports[`Summaries renders default 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    />
  </div>
</div>
`;

exports[`Summaries renders summaries 1`] = `
<div
  className="Summaries item-medium"
>
  <div
    className="card"
  >
    <ul
      className="list-group list-group-flush"
    >
      <Summary
        channel="user-Fraudier"
        channelName={null}
        comments={78}
        created={1513920502005}
        downvotes={0}
        icon="far fa-image"
        id="zbmsb"
        isPlaceholder={false}
        key="zbmsb"
        owner="Fraudier"
        preview={
          Object {
            "content": "https://k50.kn3.net/taringa/2/7/9/1/4/3/20/fraudier/D4C.jpg",
            "kind": "image",
          }
        }
        score="2.9k"
        shares={1}
        slug="si-no-das-like-no-tendras-pelirojas-en-100-anos_zbmsb"
        thumbnail="https://k50.kn3.net/taringa/2/7/9/1/4/3/20/fraudier/78x1026_D4C.jpg"
        title="Si no das like no tendras pelirojas en 100 años"
        upvotes={0}
      />
    </ul>
  </div>
</div>
`;
